--- a/app/vviews/pages/items/form.ejs
+++ b/app/vviews/pages/items/form.ejs
@@ -1,10 +1,12 @@
 <% include ./../../helpers/selectbox %>
 
 <% include ./../../elements/errors %>
+<% include ./../../helpers/image-form %>
 
 <% 
 	const collection = "items";
 	const linkPrefix = systemConfig.prefixAdmin + `/${collection}/`;
+	const folderUpload 	= `uploads/items/` ;
 %>
 
 
@@ -24,7 +26,12 @@
 				<div class="col-xs-12 col-sm-8">
 					<input type="file" name="avatar" class="form-control form-control-sm">
 				</div>
+			<% if(item.id !== undefined && item.id !== '') { %>
+			<div class="form-group row">
+				<label></label>
+				<%- imageHelper(folderUpload, item.avatar ,  item.name , 'form-group row') %>
 			</div>
+			<% } %>	
 
 			<div class="form-group row">
 				<label for="name" class="col-sm-2 col-form-label text-sm-right required">slug</label>
